# proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-alpine  Dockerfile-broker  Dockerfile-handler  Dockerfile-router  README.md  build.sh  log4rs.yaml
broker/: Cargo.toml  Dockerfile
broker/src/: error.rs  lib.rs
broker/src/grpc/: client.rs  server.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
dockerfiles/: Dockerfile-broker  Dockerfile-handler  Dockerfile-router
examples/: Cargo.toml
examples/src/connect/: client.rs
grpc/: Cargo.toml
grpc/proto/: service.proto
grpc/src/: client.rs  error.rs  lib.rs  server.rs
handler/: Cargo.toml  Dockerfile
handler/src/: error.rs  handler.rs  lib.rs
handler/src/grpc/: client.rs  server.rs
kubernets/:  virtual-service-normal.yaml  applications.yaml  cleanup.sh  configmap-common.yaml  configmap-handler.yaml  configmap-router.yaml  destinations.yaml
kubernets/app/: applications.yaml  cleanup.sh  configmap-broker.yaml  configmap-handler.yaml  install.sh  proxy-gateway.yaml
kubernets/redis/: Dockerfile  cleanup.sh  install.sh  readme.txt  redis.conf  redis.yaml  start_redis.sh
proto/: Cargo.toml  build.rs
proto/files/: message.proto  service.proto
proto/greeting/: message.proto  service.proto
proto/src/: lib.rs
router/: Cargo.toml  Dockerfile
router/src/: error.rs  http.rs  lib.rs  router.rs  token.rs
router/src/grpc/: client.rs  server.rs
