[package]
name = "broker"
version = "0.1.0"
authors = ["Andy320 <25574522@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "broker"
path = "src/bin/broker.rs"

[dependencies]
common = { version = "0.1", path = "../common" }
log  = "0.4.8"
log4rs = "0.12.0"
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros", "stream", "fs", "signal"] }