[package]
name = "broker"
version = "0.1.0"
authors = ["Andy320 <25574522@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "broker"
path = "src/bin/broker.rs"

[dependencies]
common = { version = "0.1", path = "../common" }
proto = { version = "0.1", path = "../proto" }
log  = "0.4.8"
log4rs = "0.12.0"
futures = "0.3.1"
lazy_static = "1.4.0"
thiserror = "1.0.9"
tonic = "0.2"
tokio = { version = "0.2", features = ["full"] }
redis = "0.16.0"