[package]
name = "grpc"
version = "0.1.0"
authors = ["Andy320 <25574522@qq.com>"]
edition = "2018"

[dependencies]
log  = "0.4.8"
prost = "0.6"
prost-derive = "0.6"
tonic = "0.2"
futures = "0.3.1"
thiserror = "1.0.9"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }