[package]
name = "proxy"
version = "0.1.0"
authors = ["Andy320 <25574522@qq.com>"]
edition = "2018"

[[bin]]
name = "handler"
path = "src/bin/handler_main.rs"

[dependencies]
common = { version = "0.1", path = "../common" }
grpc = { version = "0.1", path = "../grpc" }
thiserror = "1.0.9"
log  = "0.4.8"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros", "stream", "fs", "signal"] }
#futures = "0.3.1"