[package]
name = "handler"
version = "0.1.0"
authors = ["Andy320 <25574522@qq.com>"]
edition = "2018"

[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
common = { version = "0.1", path = "../common" }
proto = { version = "0.1", path = "../proto" }
thiserror = "1.0.9"
log  = "0.4.8"
lazy_static = "1.4.0"
tonic = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
log4rs = "0.12.0"

