[package]
name = "router"
version = "0.1.0"
authors = ["Andy320 <25574522@qq.com>"]
edition = "2018"

[[bin]]
name = "router"
path = "src/bin/router.rs"

[dependencies]
common = { version = "0.1", path = "../common" }
proto = { version = "0.1", path = "../proto" }
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-http = "1.0.1"
awc = "1.0.1"

futures = "0.3.1"
log  = "0.4.8"
json = "0.12.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonwebtoken = "6"
validator = "0.10"
clap = "2.33.0"
thiserror = "1.0.9"
lazy_static = "1.4.0"
chrono = "0.4.10"
tonic = "0.2"
validator_derive = { version = "0.10", features = ["unic", "phone"] }